@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* New security-related options: "DicomAlwaysAllowEcho"
 * Fix issue 64 (OpenBSD support)
 
 
